--- a/_src/templates/partials/_go-team.html
+++ b/_src/templates/partials/_go-team.html
@@ -1,9 +1,24 @@
 <section id="go_team" class="go-team">
-  <div class="style-box-team">
-    <h1 class="style-box-team-title uppercase">equipo</h1>
-    <div class="style-box-team-text">
-      <p><strong>The Cool Coders</strong> es un colectivo de adalabers que surge de la transformación del sector digital y de la creciente demanda de más talento femenino que aporte diversidad, crecimiento e innovación al campo de las nuevas tecnologías. Por ello, en un momento en el que se precisan muchos profesionales cualificados y especializados, decidimos dar un cambio a nuestras vidas y apostar por un sector en continuo crecimiento y desarrollo.</p>
-      <p>Somos una agencia pequeña de programadoras front-end junior que cuenta con la formación y motivación suficiente para colaborar en proyectos con empresas de distintos tamaños y sectores del mundo de la programación y el desarrollo web. Creemos que la confianza y el trabajo en equipo es la clave para construir relacione productivas y duraderas, tanto entre nosotras como con los clientes. <strong>Conócenos</strong>.</p>
+  <div class="style-box">
+    <h1 class="container-texto uppercase">equipo</h1>
+    <div class="container-equipo">
+      <p>
+        <strong>The Cool Coders</strong> es un colectivo de adalabers que surge
+        de la transformación del sector digital y de la creciente demanda de más
+        talento femenino que aporte diversidad, crecimiento e innovación al
+        campo de las nuevas tecnologías. Por ello, en un momento en el que se
+        precisan muchos profesionales cualificados y especializados, decidimos
+        dar un cambio a nuestras vidas y apostar por un sector en continuo
+        crecimiento y desarrollo.
+      </p>
+      <p>
+        Somos una agencia pequeña de programadoras front-end junior que cuenta
+        con la formación y motivación suficiente para colaborar en proyectos con
+        empresas de distintos tamaños y sectores del mundo de la programación y
+        el desarrollo web. Creemos que la confianza y el trabajo en equipo es la
+        clave para construir relacione productivas y duraderas, tanto entre
+        nosotras como con los clientes. <strong>Conócenos</strong>.
+      </p>
     </div>
   </div>
 </section>
