--- a/_src/assets/scss/core/_go-team.scss
+++ b/_src/assets/scss/core/_go-team.scss
@@ -8,57 +8,62 @@
   text-transform: uppercase;
 }
 
-.style-box-team {
+.style-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 30px 15px;
+}
 
-  &-title {
+.container {
+  &-texto {
     width: 100%;
     height: 2.813rem;
     font: 24px "Rubik", sans-serif;
     line-height: 1.88;
     text-align: center;
-    color: $third-color;
+    color: rgb(20, 217, 196);
   }
-
-  &-text {
+  &-equipo {
     width: 100%;
     font-family: "OpenSans", sans-serif;
     line-height: 1.5;
     text-align: center;
-    color: $second-color;
+    color: #54585a;
   }
 }
+
 @media all and (min-width: 768px) {
-  .style-box-team {
+  .style-box {
     padding: 45px 45px 30px 45px;
+  }
 
-    &-text {
-      width: 678px;
-      opacity: 0.67;
-    }
+  .container-equipo {
+    width: 678px;
+  }
 
-    &-title {
-      color: $primary-color;
-    }
+  .container-texto {
+    color: #099d8d;
+  }
+
+  .container-equipo {
+    opacity: 0.67;
   }
 }
 
 @media all and (min-width: 1200px) {
-  .style-box-team {
+  .style-box {
     padding-top: 45px;
     padding-bottom: 60px;
+  }
 
-    &-title {
-      color: $primary-color;
-    }
+  .container-texto {
+    color: #099d8d;
+  }
 
-    &-text {
-      opacity: 0.67;
-      padding: 15px 0px 60px 0px;
-    }
+  .container-equipo {
+    opacity: 0.67;
+    padding: 15px 0px 60px 0px;
   }
 }
