--- a/_src/templates/partials/_sandw.html
+++ b/_src/templates/partials/_sandw.html
@@ -1,11 +1,11 @@
-<aside class="sandw">
+<aside class="section-2">
 
   <div class="square"></div>
 
-  <div class="sandw-container-s">
+  <div class="section-2-container-s">
 
-  <h3 class="sandw-title capitalize">fortalezas</h3>
-  <p class="sandw-text">Somos un equipo organizado y comprometido que aborda cada proyecto desde
+  <h3 class="section-2-title capitalize">fortalezas</h3>
+  <p class="section-2-text">Somos un equipo organizado y comprometido que aborda cada proyecto desde
     una visión global.<br></br>Tomando la creatividad y tecnicidad de base, nuestro trabajo derrocha
     versatilidad debido a nuestra variada experiencia profesional previa.<br></br>Asimismo,
     dominamos diversas herramientas de RRHH, marketing, recursos digitales e idiomas, que
@@ -13,9 +13,9 @@
 
   </div>
 
-  <div class="sandw-container-w">
-  <h3 class="sandw-title capitalize">debilidades</h3>
-  <p class="sandw-text">Tenemos un perfil junior, pero aportamos un gran espíritu de superación,
+  <div class="section-2-container-w">
+  <h3 class="section-2-title capitalize">debilidades</h3>
+  <p class="section-2-text">Tenemos un perfil junior, pero aportamos un gran espíritu de superación,
     ganas de aprender y motivación.<br></br>A veces las tareas se nos acumulan, y surgen problemas.
     Sin embargo, los convertimos en desafíos a superar.<br></br>Y sí, nos gusta ir de cañas, pero
     como actividad de team-building, aprovechando la oportunidad para compartir conocimientos y
