--- a/_src/assets/scss/core/_sandw.scss
+++ b/_src/assets/scss/core/_sandw.scss
@@ -19,7 +19,7 @@
 
 .section-2 {
   position: relative;
-  background-color: $section2Background;
+  background-color: $second-color;
   padding: 30px 15px 45px 15px;
 }
 
