--- a/_src/assets/scss/core/_go-about.scss
+++ b/_src/assets/scss/core/_go-about.scss
@@ -1,27 +1,23 @@
 /*TITLE OF SECTION*/
 .go-about {
   display: flex;
-  height: min-content;
+  flex-direction: column;
+  align-items: center;
   position: relative;
   .title-about {
-    width: 100%;
     height: 45px;
     margin: 30px 0px 26px;
     font-family: Rubik;
     font-size: 24px;
     font-weight: 500;
-    font-stretch: normal;
-    font-style: normal;
     line-height: 1.88;
-    letter-spacing: normal;
     text-align: center;
-    color: #099d8d;
+    color: $primary-color;
   }
 }
 
 /*CANDIDATE*/
 .candidate {
-  width: 100%;
   display: inline-flex;
   flex-direction: column;
   justify-content: center;
@@ -33,7 +29,7 @@
     margin: 11px 0px 0px;
     height: 45px;
     font-size: 20px;
-    font-family: "Open Sans";
+    font-family: $secondary-font;
     font-weight: 400;
     line-height: 2.25;
     color: #000000;
@@ -42,17 +38,17 @@
     width: 18.125rem;
     padding: 0px;
     margin: 0px;
-    font-family: "Open Sans";
+    font-family: $secondary-font;
     font-weight: 400;
     line-height: 1.5;
-    color: #54585a;
+    color: $second-color;
   }
 }
 .container-icons-about {
   margin: 15px 0 41px;
   padding: 0px;
   list-style: none;
-  color: #099d8d;
+  color: $primary-color;
   width: 7.75rem;
   height: 1.875rem;
   display: inline-flex;
@@ -68,7 +64,7 @@
   border: solid 5px rgba(0, 0, 0, 0.08);
 }
 i {
-  color: #099d8d;
+  color: $primary-color;
 }
 
 /* MEDIAQUERY ADALABERS*/
