--- a/docs/assets/css/main-form.css
+++ b/docs/assets/css/main-form.css
@@ -1,588 +1,1 @@
-body,
-html {
-  margin: 0px;
-  top: 0%;
-  color: #fff;
-}
-header {
-  width: 100%;
-  height: 3.75rem;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  background-color: rgba(9, 157, 141, 0.95);
-}
-.main-title {
-  height: 30px;
-  font: 1rem "Rubik", "Open Sans", sans-serif;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  text-align: center;
-}
-.main-title a {
-  text-decoration: none;
-  color: #fff;
-}
-.main-title a:hover {
-  color: rgba(8, 97, 88, 0.95);
-  font-size: 20px;
-}
-.nav-menu {
-  width: 100%;
-  height: 60px;
-  padding: 0;
-  margin: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  list-style-type: none;
-  background-color: rgba(20, 217, 196, 0.95);
-}
-.nav-menu .list a {
-  display: block;
-  text-decoration: none;
-  text-align: center;
-  font: 15px "Rubik", "Open Sans", sans-serif;
-  color: #fff;
-}
-.nav-menu .list a:hover {
-  color: rgba(8, 97, 88, 0.95);
-  font-size: 18px;
-}
-.menu {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  width: 100%;
-  z-index: 1;
-}
-.hero-image {
-  background: url("../images/hero-image.jpeg") 50% no-repeat;
-  background-size: cover;
-  height: 421px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  margin-bottom: 38px;
-}
-.hero-text {
-  width: 100%;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 0 15px;
-  padding: 15px;
-  top: 50%;
-  position: relative;
-  color: black;
-  background-color: #fff;
-}
-.hero-text h2 {
-  font-family: "Open Sans", sans-serif;
-  font-size: 1.125rem;
-  line-height: 25px;
-  text-align: center;
-  overflow: hidden;
-}
-* {
-  margin: 0px;
-  padding: 0px;
-}
-.main {
-  width: 100%;
-  height: 50.625rem;
-  text-align: center;
-}
-.contact {
-  width: 7.938rem;
-  height: 2.813rem;
-  margin: 1.875rem auto;
-  font-family: "Rubik", sans-serif;
-  font-size: 1.5rem;
-  font-weight: 500;
-  font-stretch: normal;
-  font-style: normal;
-  text-align: center;
-  line-height: 1.88;
-  letter-spacing: normal;
-  color: #099d8d;
-}
-.p {
-  width: 18.125rem;
-  height: 9rem;
-  margin: 0.938rem auto;
-  font-family: "Open Sans";
-  font-size: 16px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.5;
-  letter-spacing: normal;
-  color: #54585a;
-}
-.p__small {
-  font-size: 12px;
-}
-.p__small--sup {
-  font-size: 12px;
-  color: #14d9c4;
-}
-.container-formul {
-  display: inline-block;
-  height: 30.625rem;
-  margin-top: 5.25rem;
-}
-.label {
-  text-align: left;
-  height: 1.188rem;
-  margin-top: 0.813rem;
-  margin-bottom: 0.438rem;
-  font-family: "Open Sans";
-  font-size: 14px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #099d8d;
-}
-#firstName {
-  width: 18.125rem;
-  height: 2.813rem;
-  border: solid 1px #b8b8b9;
-}
-.second-part {
-  display: block;
-  text-align: center;
-}
-#Email {
-  width: 18.125rem;
-  height: 2.813rem;
-  border: solid 1px #b8b8b9;
-}
-.Telephone {
-  padding-left: 0;
-}
-#Tel {
-  width: 18.125rem;
-  height: 2.813rem;
-  border: solid 1px #b8b8b9;
-}
-#Message {
-  width: 18.125rem;
-  height: 6.563rem;
-  border: solid 1px #b8b8b9;
-}
-#Button {
-  width: 17.375rem;
-  height: 2.813rem;
-  margin-top: 1.875rem;
-  border-radius: 4px;
-  color: #fff;
-  background-color: #099d8d;
-}
-.Button-green {
-  text-align: center;
-}
-.footer {
-  display: grid;
-  grid-template-rows: 31px 40px 90px 90px;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: start;
-  justify-items: center;
-}
-.footer__mark {
-  grid-row: 1 / 2;
-  color: #b8b8b9;
-  width: 100%;
-}
-.footer__copy {
-  grid-row: 2 / 3;
-  color: #b8b8b9;
-  font-family: "Open Sans";
-  font-size: 0.875rem;
-  text-transform: capitalize;
-  text-align: center;
-}
-.footer__logo {
-  grid-row: 4 / 5;
-  width: 115.9px;
-  height: 45px;
-  text-align: center;
-}
-.footer__logo img {
-  width: 100%;
-  height: 100%;
-}
-.footer__nav {
-  grid-row: 3 / 4;
-  text-align: center;
-  padding-left: 0px;
-}
-.grid-nav__link {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: rgba(84, 88, 90, 0.75);
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 20px;
-  font-family: "Open Sans", sans-serif;
-}
-@media all and (min-width: 768px) {
-  .menu {
-    height: 60px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    background-color: rgba(9, 157, 141, 0.95);
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-  }
-  .header {
-    padding-left: 45px;
-    background-color: transparent;
-    width: 50%;
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-  }
-  .nav {
-    padding-right: 45px;
-  }
-  .nav-menu {
-    width: 321px;
-    background-color: transparent;
-  }
-  .hero-image {
-    background-position: 0% 15%;
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-    -webkit-box-align: end;
-    -ms-flex-align: end;
-    align-items: flex-end;
-  }
-  .hero-text {
-    width: 441px;
-    height: 80px;
-    margin-left: 46px;
-    margin-right: 281px;
-    padding: 15px 30px;
-    top: 0px;
-    opacity: 0.8;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-  }
-  .hero-text h2 {
-    text-align: start;
-  }
-  .footer {
-    grid-template-rows: 25px 90px 56px;
-    grid-template-columns: 45px 1fr 1fr 45px;
-  }
-  .footer__mark {
-    grid-row: 1 / 2;
-    grid-column: span 4;
-  }
-  .footer__copy {
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
-    justify-self: left;
-    text-align: left;
-  }
-  .footer__logo {
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
-    justify-self: left;
-    align-self: flex-end;
-    padding-bottom: 4px;
-  }
-  .footer__nav {
-    grid-row: 2 / 3;
-    grid-column: 3 / 4;
-    justify-self: right;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    text-align: right;
-  }
-  .grid-nav__link {
-    line-height: 30px;
-  }
-}
-@media all and (min-width: 768px) and (max-width: 1200px) {
-  .container-main {
-    width: 100%;
-    height: 50.625rem;
-    text-align: center;
-  }
-  .contact {
-    height: 2.813rem;
-    width: 7.938rem;
-    margin: 1.875rem auto;
-    font-family: "Rubik", sans-serif;
-    font-size: 1.5rem;
-    font-weight: 500;
-    font-stretch: normal;
-    font-style: normal;
-    text-align: center;
-    line-height: 1.88;
-    letter-spacing: normal;
-    color: #099d8d;
-  }
-  .p {
-    width: 27.625rem;
-    height: 7.5rem;
-    margin: 0.938rem auto;
-    font-family: "Open Sans";
-    font-size: 1rem;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.5;
-    letter-spacing: normal;
-    color: #54585a;
-  }
-  .p__small {
-    font-size: 12px;
-  }
-  .p__small--sup {
-    font-size: 12px;
-    color: #14d9c4;
-  }
-  .container-formul {
-    display: inline-block;
-    height: 30.625rem;
-    margin-top: 5.25rem;
-  }
-  .label {
-    width: 8.188rem;
-    height: 1.188rem;
-    text-align: left;
-    margin-top: 0.813rem;
-    margin-bottom: 0.438rem;
-    font-family: "Open Sans";
-    font-size: 14px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: #54585a;
-  }
-  #firstName {
-    width: 27.625rem;
-    height: 2.813rem;
-    border: solid 1px #b8b8b9;
-  }
-  .second-part {
-    display: block;
-    text-align: center;
-  }
-  #Email {
-    width: 27.625rem;
-    height: 2.813rem;
-    border: solid 1px #b8b8b9;
-  }
-  .Telephone {
-    padding-left: 0;
-  }
-  #Tel {
-    width: 27.625rem;
-    height: 2.813rem;
-    border: solid 1px #b8b8b9;
-  }
-  #Message {
-    width: 27.625rem;
-    height: 6.563rem;
-    border: solid 1px #b8b8b9;
-  }
-  #Button {
-    width: 12.875rem;
-    height: 2.813rem;
-    margin-top: 1.875rem;
-    border-radius: 4px;
-    color: #fff;
-    background-color: #099d8d;
-  }
-  .Button-green {
-    text-align: right;
-  }
-}
-@media all and (min-width: 1200px) {
-  .header {
-    height: 60px;
-    padding-left: 142px;
-  }
-  .nav {
-    padding-right: 138px;
-  }
-  .nav-menu {
-    width: 295px;
-  }
-  .hero-image {
-    background-position: 0% 15%;
-    height: 550px;
-  }
-  .hero-text {
-    width: 574px;
-    height: 90px;
-    margin-left: 138px;
-    margin-right: 488px;
-    padding: 15px 30px;
-    top: 0px;
-    opacity: 0.8;
-  }
-  .hero-text h2 {
-    font-size: 1.5rem;
-    line-height: 30px;
-    text-align: start;
-    overflow: hidden;
-  }
-  .footer {
-    grid-template-rows: 25px 90px 47px;
-    grid-template-columns: 138px 1fr 1fr 138px;
-  }
-}
-@media (min-width: 1200px) {
-  .container-main {
-    width: 100%;
-    height: 47.063rem;
-    text-align: center;
-  }
-  .contact {
-    width: 7.938rem;
-    height: 2.813rem;
-    margin: 1.875rem auto;
-    font-family: "Rubik", sans-serif;
-    font-size: 1.5rem;
-    font-weight: 500;
-    font-stretch: normal;
-    font-style: normal;
-    text-align: center;
-    line-height: 1.88;
-    letter-spacing: normal;
-    color: #099d8d;
-  }
-  .p {
-    width: 37.563rem;
-    height: 6rem;
-    margin: 0.938rem auto;
-    font-family: "Open Sans";
-    font-size: 1rem;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.5;
-    letter-spacing: normal;
-    color: #54585a;
-  }
-  .p__small {
-    font-size: 12px;
-  }
-  .p__small--sup {
-    font-size: 12px;
-    color: #14d9c4;
-  }
-  .container-formul {
-    display: inline-block;
-    height: 30.625rem;
-    margin-top: 5.25rem;
-  }
-  .label {
-    width: 8.188rem;
-    height: 1.188rem;
-    text-align: left;
-    margin-top: 0.813rem;
-    margin-bottom: 0.438rem;
-    font-family: "Open Sans";
-    font-size: 14px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: #54585a;
-  }
-  #firstName {
-    width: 37.563rem;
-    height: 2.813rem;
-    border: solid 1px #b8b8b9;
-  }
-  .second-part {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    text-align: center;
-  }
-  #Email {
-    width: 24.688rem;
-    height: 2.813rem;
-    border: solid 1px #b8b8b9;
-  }
-  .Telephone {
-    padding-left: 2.75rem;
-  }
-  #Tel {
-    width: 10.125rem;
-    height: 2.813rem;
-    border: solid 1px #b8b8b9;
-  }
-  #Message {
-    width: 37.563rem;
-    height: 6.563rem;
-    border: solid 1px #b8b8b9;
-  }
-  #Button {
-    width: 17.375rem;
-    height: 2.813rem;
-    margin-top: 1.875rem;
-    border-radius: 4px;
-    color: #fff;
-    background-color: #099d8d;
-  }
-  .Button-green {
-    text-align: right;
-  }
-}
+body,html {margin: 0px;top: 0%;color: #fff;overflow-x: hidden;}header {width: 100%;height: 3.75rem;-webkit-box-sizing: border-box;box-sizing: border-box;padding: 15px;display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack: center;-ms-flex-pack: center;justify-content: center;-webkit-box-align: center;-ms-flex-align: center;align-items: center;background-color: rgba(9,157,141,0.95);}.main-title {height: 30px;font: 1rem "Rubik", "Open Sans", sans-serif;display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack: center;-ms-flex-pack: center;justify-content: center;-webkit-box-align: center;-ms-flex-align: center;align-items: center;text-align: center;}.main-title a {text-decoration: none;color: #fff;}.main-title a:hover {color: rgba(8,97,88,0.95);font-size: 20px;}.nav-menu {width: 100%;height: 60px;padding: 0;margin: 0;display: -webkit-box;display: -ms-flexbox;display: flex;-ms-flex-wrap: wrap;flex-wrap: wrap;-webkit-box-orient: horizontal;-webkit-box-direction: normal;-ms-flex-direction: row;flex-direction: row;-ms-flex-pack: distribute;justify-content: space-around;-webkit-box-align: center;-ms-flex-align: center;align-items: center;list-style-type: none;background-color: rgba(20,217,196,0.95);}.nav-menu .list a {display: block;text-decoration: none;text-align: center;font: 15px "Rubik", "Open Sans", sans-serif;color: #fff;}.nav-menu .list a:hover {color: rgba(8,97,88,0.95);font-size: 18px;}.menu {position: -webkit-sticky;position: sticky;top: 0;width: 100%;z-index: 1;}.hero-image {background: url("../images/hero-image.jpeg") 50% no-repeat;background-size: cover;height: 421px;display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-align: center;-ms-flex-align: center;align-items: center;-webkit-box-pack: center;-ms-flex-pack: center;justify-content: center;margin-bottom: 38px;}.hero-text {width: 100%;-webkit-box-sizing: border-box;box-sizing: border-box;margin: 0 15px;padding: 15px;top: 50%;position: relative;color: black;background-color: #fff;}.hero-text h2 {font-family: "Open Sans", sans-serif;font-size: 1.125rem;line-height: 25px;text-align: center;overflow: hidden;}* {margin: 0px;padding: 0px;}.main {width: 100%;height: 50.625rem;text-align: center;margin-bottom: 50px;}.form-contact {width: 7.938rem;height: 2.813rem;margin: 1.875rem auto;font-family: "Rubik",sans-serif;font-size: 1.5rem;font-weight: 500;text-align: center;line-height: 1.88;color: #099d8d;}.form-container-text {width: 18.125rem;height: 9rem;margin: 0.938rem auto;font-family: "Open Sans";font-size: 1rem;line-height: 1.5;color: #54585a;}small {font-size: 12px;}.form-text-style-1 {font-size: 0.75rem;color: #14d9c4;}.container-form {display: inline-block;height: 30.625rem;margin-top: 5.25rem;}.label {text-align: left;height: 1.188rem;margin-top: 0.813rem;margin-bottom: 0.438rem;font-family: "Open Sans";font-size: 0.875rem;color: #54585a;}#firstName {width: 18.125rem;height: 2.813rem;border: solid 1px #b8b8b9;}.second-part {display: block;text-align: center;}#Email {width: 18.125rem;height: 2.813rem;border: solid 1px #b8b8b9;}.Telephone {padding-left: 0;}#Tel {width: 18.125rem;height: 2.813rem;border: solid 0.063rem #b8b8b9;}#Message {width: 18.125rem;height: 6.563rem;border: solid 1px #b8b8b9;}#Button {width: 17.375rem;height: 2.813rem;margin-top: 1.875rem;border-radius: 0.25rem;color: #fff;background-color: #099d8d;}.form.button {text-align: center;margin-bottom: 45px;}.footer {display: grid;grid-template-rows: 31px 40px 90px 90px;-webkit-box-align: start;-ms-flex-align: start;align-items: start;justify-items: center;}.footer__mark {grid-row: 1 / 2;color: #b8b8b9;width: 100%;}.footer__copy {grid-row: 2 / 3;color: #b8b8b9;font-family: "Open Sans",sans-serif;font-size: 0.875rem;text-transform: capitalize;text-align: center;}.footer__logo {grid-row: 4 / 5;width: 115.9px;height: 45px;}.footer__logo img {width: 100%;height: 100%;}.footer__nav {grid-row: 3 / 4;text-align: center;padding-left: 0px;}.grid-nav__link {text-decoration: none;text-transform: uppercase;color: #54585a;opacity: 75%;font-size: 14px;font-weight: 600;line-height: 20px;font-family: "Open Sans",sans-serif;}@media all and (min-width: 768px) {.menu {height: 60px;display: -webkit-box;display: -ms-flexbox;display: flex;background-color: rgba(9,157,141,0.95);-webkit-box-pack: justify;-ms-flex-pack: justify;justify-content: space-between;}.header {padding-left: 45px;background-color: transparent;width: 50%;-webkit-box-pack: start;-ms-flex-pack: start;justify-content: flex-start;}.nav {padding-right: 45px;}.nav-menu {width: 321px;background-color: transparent;}.hero-image {background-position: 0% 15%;-webkit-box-pack: start;-ms-flex-pack: start;justify-content: flex-start;-webkit-box-align: end;-ms-flex-align: end;align-items: flex-end;}.hero-text {width: 441px;height: 80px;margin-left: 46px;margin-right: 281px;padding: 15px 30px;top: 0px;opacity: 0.8;display: -webkit-box;display: -ms-flexbox;display: flex;-webkit-box-pack: start;-ms-flex-pack: start;justify-content: flex-start;-webkit-box-align: center;-ms-flex-align: center;align-items: center;}.hero-text h2 {text-align: start;}.footer {grid-template-rows: 25px 90px 56px;grid-template-columns: 45px 1fr 1fr 45px;}.footer__mark {grid-row: 1 / 2;grid-column: span 4;}.footer__copy {grid-row: 2 / 3;grid-column: 2 / 3;justify-self: left;}.footer__logo {grid-row: 2 / 3;grid-column: 2 / 3;justify-self: left;align-self: flex-end;padding-bottom: 4px;}.footer__nav {grid-row: 2 / 3;grid-column: 3 / 4;justify-self: right;-webkit-box-pack: justify;-ms-flex-pack: justify;justify-content: space-between;text-align: right;}.grid-nav__link {line-height: 30px;}}@media all and (min-width: 768px) and (max-width: 1200px) {.container-main {height: 50.625rem;}.form-container-text {width: 27.625rem;height: 7.5rem;}.label {width: 8.188rem;height: 1.188rem;}#firstName {width: 27.625rem;}.second-part {display: block;}#Email {width: 27.625rem;}.Telephone {padding-left: 0;}#Tel {width: 27.625rem;}#Message {width: 27.625rem;}.form-button {text-align: right;}}@media all and (min-width: 1200px) {.header {height: 60px;padding-left: 142px;}.nav {padding-right: 138px;}.nav-menu {width: 295px;}.hero-image {background-position: 0% 15%;height: 550px;}.hero-text {width: 574px;height: 90px;margin-left: 138px;margin-right: 488px;}.hero-text h2 {font-size: 1.5rem;line-height: 30px;overflow: hidden;}.footer {grid-template-rows: 25px 90px 47px;grid-template-columns: 138px 1fr 1fr 138px;}}@media (min-width: 1200px) {.container-main {height: 47.063rem;}.form-container-text {width: 37.563rem;height: 6rem;}.label {width: 8.188rem;height: 1.188rem;}#firstName {width: 37.563rem;}.second-part {display: -webkit-box;display: -ms-flexbox;display: flex;}#Email {width: 24.688rem;}.Telephone {padding-left: 2.75rem;}#Tel {width: 10.125rem;}#Message {width: 37.563rem;}.form-button {text-align: right;}}
